--- a/css/main.css
+++ b/css/main.css
@@ -2,201 +2,113 @@
 *{
 	box-sizing:border-box;
 }
-body{
-	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-   font-weight: 100;
-}
-#container{
-	width:850px;
-	height:800px;
-	background:#eff3f7;
-	margin:0 auto;
-	font-size:0;
-	border-radius:5px;
-	overflow:hidden;
-}
-aside{
-	width:260px;
-	height:800px;
-	background-color:#3b3e49;
-	display:inline-block;
-	font-size:15px;
-	vertical-align:top;
-}
-main{
-	width:590px;
-	height:800px;
-	display:inline-block;
-	font-size:15px;
-	vertical-align:top;
-}
-
-aside header{
-	padding:30px 20px;
-}
-aside input{
-	width:100%;
-	height:50px;
-	line-height:50px;
-	padding:0 50px 0 20px;
-	background-color:#5e616a;
-	border:none;
-	border-radius:3px;
-	color:#fff;
-	background-image:url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/1940306/ico_search.png);
-	background-repeat:no-repeat;
-	background-position:170px;
-	background-size:25px;
-}
-aside input::placeholder{
-	color:#fff;
-}
-aside ul{
-	padding-left:0;
-	margin:0;
-	list-style-type:none;
-	overflow-y:scroll;
-	height:690px;
-}
-aside li{
-	padding:10px 0;
-}
-aside li:hover{
-	background-color:#5e616a;
-}
-h2,h3{
-	margin:0;
-}
-aside li img{
-	border-radius:50%;
-	margin-left:20px;
-	margin-right:8px;
-}
-aside li div{
-	display:inline-block;
-	vertical-align:top;
-	margin-top:12px;
-}
-aside li h2{
-	font-size:14px;
-	color:#fff;
-	font-weight:normal;
-	margin-bottom:5px;
-}
-aside li h3{
-	font-size:12px;
-	color:#7e818a;
-	font-weight:normal;
-}
-
-.status{
-	width:8px;
-	height:8px;
-	border-radius:50%;
-	display:inline-block;
-	margin-right:7px;
-}
-.green{
-	background-color:#58b666;
-}
-.orange{
-	background-color:#ff725d;
-}
-.blue{
-	background-color:#6fbced;
-	margin-right:0;
-	margin-left:7px;
-}
-
-main header{
-	height:110px;
-	padding:30px 20px 30px 40px;
-}
-main header > *{
-	display:inline-block;
-	vertical-align:top;
-}
-main header img:first-child{
-	border-radius:50%;
-}
-main header img:last-child{
-	width:24px;
-	margin-top:8px;
-}
-main header div{
-	margin-left:10px;
-	margin-right:145px;
-}
-main header h2{
-	font-size:16px;
-	margin-bottom:5px;
-}
-main header h3{
-	font-size:14px;
-	font-weight:normal;
-	color:#7e818a;
-}
-
-#chat{
-	letter-spacing: 1px;
-	white-space: pre-line;
-	padding-left:0;
-	margin:0;
-	list-style-type:none;
-	overflow-y:scroll;
-	height:505px;
-	border-top:2px solid #fff;
-	border-bottom:2px solid #fff;
-}
-#chat li{
-	padding:10px 30px;
-}
-#chat h2,#chat h3{
-	display:inline-block;
-	font-size:11px;
-	font-weight:normal;
-}
-#chat h3{
-	color:#bbb;
-}
-#chat .entete{
-	margin-bottom:5px;
-}
-#chat .message{
-	white-space: pre-line;
-	padding:20px;
-	color:rgb(44, 43, 43);
-	line-height:25px;
-	max-width:90%;
-	display:inline-block;
-	text-align:left;
-	border-radius:5px;
-}
-#chat .me{
-	text-align:right;
-}
-#chat .you .message{
-	background-color:#eef7ef;
-}
-.animation{
-	width: 100%;
-}
-/* Add animation to "page content" */
-.animate-bottom {
-	position: relative;
-	-webkit-animation-name: animatebottom;
-	-webkit-animation-duration: 1s;
-	animation-name: animatebottom;
-	animation-duration: 1s
+@font-face {
+	font-family: synergy; 
+	src: url('./css/VPPixel-Simplified.otf');
   }
-  
-  @-webkit-keyframes animatebottom {
-	from { bottom:-100px; opacity:0 } 
-	to { bottom:0px; opacity:1 }
-  }
-  
-  @keyframes animatebottom { 
-	from{ bottom:-100px; opacity:0 } 
-	to{ bottom:0; opacity:1 }
-  }
+body {
+  font-family: 'Poppins', sans-serif;
+}
 
+#main {
+  width: 90%;
+  padding: 10px;
+  background: #062d55;
+  margin: 0 auto;
+  border-radius: 10px;
+  overflow: hidden;
+  font-weight: 400;
+}
+
+.box {
+  height: 500px;
+}
+.searcher{
+  width:100%;
+  height:50px;
+  line-height:50px;
+  padding:0 50px 0 20px;
+  background-color:#062d55;
+  border:none;
+  color: #fff;
+  background-image:url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/1940306/ico_search.png);
+  background-repeat:no-repeat;
+  background-position:310px;
+  background-size:35px;
+}
+
+img{
+width: 100%;
+}
+.indicator{
+text-align: center;
+color: #062d55;
+background-color: #fff;
+border-radius: 10px;
+overflow: hidden;
+}
+@media only screen and (max-width: 600px) {
+  #main {
+  width: 100%;
+  padding: 2px;
+  margin: 0 auto;
+  border-radius: 5px;
+  overflow: hidden;
+}
+.searcher{
+  width:20%;
+  height:30px;
+  line-height:50px;
+  padding:0 5px 0 5px;
+  background-color:#062d55;
+  border:none;
+  color: #fff;
+  background-image:url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/1940306/ico_search.png);
+  background-repeat:no-repeat;
+  background-position:360px;
+  background-size:20px;
+
+}
+img{
+width: 100%;
+display: none;
+}
+.indicator{
+height:23px;
+background-color: #fff;
+border-radius: 5px;
+}
+center{
+display:none; 
+}
+.box {
+  display: none;
+}
+
+}
+.col{
+background-color: #062d55;
+color: #fff;
+}
+#pad{
+animation-name: example;
+animation-duration: 2s;  
+margin-top:5px ;
+}
+@keyframes example {
+from {top: 100px;}
+to {top: 0px;}
+}
+strong{
+font-weight: 800;
+}
+center{
+position: relative;
+bottom:50px;
+font-family: synergy, sans-serif;
+font-size: 40px;
+font-weight: 800;
+}
+.footer{
+text-align: center;
+}
